--- a/examples/FMM_demo_borehole.ipynb
+++ b/examples/FMM_demo_borehole.ipynb
@@ -23,7 +23,7 @@
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pyfm2dss as wt         # wavefront tracking package\n",
+    "import pyfm2d as wt         # wavefront tracking package\n",
     "import time\n",
     "from tqdm import tqdm"
    ]
@@ -682,16 +682,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:04<00:00,  2.45it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:03<00:00,  2.58it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:01<00:00,  5.64it/s]"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:03<00:00,  2.51it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:03<00:00,  2.55it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:01<00:00,  5.68it/s]"
      ]
     },
     {
@@ -703,9 +703,9 @@
       " Number of paths calculated        =  100\n",
       " Number of travel times calculated =  100\n",
       " Average compute time over 10 trials:                       \n",
-      " Average compute time just travel times:              0.178s\n",
-      " Average compute time for times and raypaths:         0.388s\n",
-      " Average compute time for times, raypaths & frechet:  0.409s\n"
+      " Average compute time just travel times:              0.176s\n",
+      " Average compute time for times and raypaths:         0.392s\n",
+      " Average compute time for times, raypaths & frechet:  0.4s\n"
      ]
     },
     {
