fix: correct submit to ThreadPoolExecutor

--- a/examples/FMM_demo_borehole_parallel.ipynb
+++ b/examples/FMM_demo_borehole_parallel.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
     "    10, extent=extent, surface=[False, True, False, False], addCorners=False\n",
     ")  # generate receivers around edge\n",
     "srcs = pyfm2d.wavetracker.generate_surface_points(\n",
-    "    40, extent=extent, surface=[True, False, False, False], addCorners=False\n",
+    "    80, extent=extent, surface=[True, False, False, False], addCorners=False\n",
     ")  # generate receivers around edge\n",
     "nr = len(recs)  # number of receivers\n",
     "ns = len(recs)  # number of sources"
@@ -182,63 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 1.5195889472961426\n",
-      " Number of paths calculated =  400\n",
-      " Number of travel times calculated =  400\n",
-      " Shape of frechet matrix =  (400, 1536)\n",
-      "<bound method Future.result of <Future at 0x11d8e27e0 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e37d0 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x10abe3f80 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e3f50 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e2750 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e1f40 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x10abca720 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e1700 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d9106b0 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d910650 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e2630 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e0e00 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e25a0 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x10ac0ad80 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e3d40 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e1d30 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e0cb0 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e2cc0 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e14c0 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e24b0 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x10abeab70 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e2b70 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e1340 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e2b10 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e3a70 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e2270 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x10ac27260 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x107d60a40 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d910200 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e19d0 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d9101d0 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x10ac091c0 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e2150 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e3950 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e1940 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e1100 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x10abe10d0 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d8e1850 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x11d910800 state=finished raised TypeError>>\n",
-      "<bound method Future.result of <Future at 0x10abcacc0 state=finished raised TypeError>>\n",
-      "wall time: 1.0151360034942627\n"
+      "wall time: 3.568790912628174\n",
+      " Number of paths calculated =  800\n",
+      " Number of travel times calculated =  800\n",
+      " Shape of frechet matrix =  (800, 1536)\n"
      ]
     }
    ],
@@ -261,19 +215,45 @@
     "print(\" Number of travel times calculated = \", len(result.ttimes))\n",
     "print(\" Shape of frechet matrix = \", result.frechet.shape)\n",
     "\n",
-    "start = time.time()\n",
-    "result_list = pyfm2d.calc_wavefronts_multithreading(velocity, recs, srcs,nthreads=2,extent=extent, options=options)\n",
-    "end = time.time()\n",
-    "print(\"wall time:\",end - start)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wall time: 1.8204059600830078\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "result_list = pyfm2d.calc_wavefronts_multithreading(velocity, recs, srcs,nthreads=2,extent=extent, options=options)\n",
+    "end = time.time()\n",
+    "print(\"wall time:\",end - start)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<bound method Future.result of <Future at 0x142e81c10 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x142e91490 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502c380 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x142e81430 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502c410 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502c4a0 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502c530 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502c5c0 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502c650 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502c6e0 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502c770 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502c800 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502c890 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502c920 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502c9b0 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502ca40 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502cad0 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502cb60 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502cbf0 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502cc80 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502cd10 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502cda0 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502ce30 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502cec0 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502cf50 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502d010 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502d0d0 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502d190 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502d250 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502d310 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502d3d0 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502d490 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502d550 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502d610 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502d6d0 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502d790 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502d850 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502d910 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502d9d0 state=finished returned WaveTrackerResult>>, <bound method Future.result of <Future at 0x14502da90 state=finished returned WaveTrackerResult>>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result_list)"
+   ]
   }
  ],
  "metadata": {
