chore: update pykonal_constant_velocity_model_in_cartesian_coordinates.ipynb

--- a/examples/pykonal_constant_velocity_model_in_cartesian_coordinates.ipynb
+++ b/examples/pykonal_constant_velocity_model_in_cartesian_coordinates.ipynb
@@ -11,9 +11,10 @@
     "\n",
     "Pykonal is an implementation of the fast marching method available here [https://github.com/malcolmw/pykonal](https://github.com/malcolmw/pykonal) and here we compare `pyfm2d` with `pykonal` for the cartesian 2d example example given here [https://malcolmw.github.io/pykonal-docs/examples.html](https://malcolmw.github.io/pykonal-docs/examples.html)\n",
     "\n",
-    "Some observation...\n",
+    "Some observations...\n",
     "- Source grid refinement and resampling of the velocity model  are turned on by default in `pyfm2d`. While they increase computation time the resulting travel times are more accurate when compared with `pykonal` for a constant velocity model.\n",
     "- If we turn source grid refinement and resampling of the velocity model off in `pyfm2d` the numerical errors are comparable to `pykonal` with the execution time for `pyfm2d` being lower by a factor of $\\approx$ 25% when compard to `pykonal`.\n"
+    "- `pyfm2d` could be compiled with "-O3" which is likely to improve its performance.\n"
    ]
   },
   {
