fixed problem to Frechet derivative lower bound.
Frechet derivatives of travel time with respect to grid velocities had a fixed floor value of 1.0E-6. For certain problems, e.g. in Cartesian co-ordinates where velocities are in m/s and have values of 10^3, this can cause derivatives of travel time with respect to slowness to have a floor of ~1.0, since dt/ds = -(v**2)*dt/dv. Hence slowness derivative matrix can be set to zero which causes flow on errors in tomography examples. Have replaced the floor with 1.0E-10 for now. This may require further work.

--- a/examples/Benchmark_1D-ray_theory.ipynb
+++ b/examples/Benchmark_1D-ray_theory.ipynb
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -520,91 +520,91 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_adc65\">\n",
+       "<table id=\"T_8c128\">\n",
        "  <caption>Linear gradient velocity model with central velocity perturbation $\\delta v/v = $6.8%</caption>\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_adc65_level0_col0\" class=\"col_heading level0 col0\" >Travel time (s)</th>\n",
-       "      <th id=\"T_adc65_level0_col1\" class=\"col_heading level0 col1\" >$\\delta t/t_a  ~(\\%)$</th>\n",
-       "      <th id=\"T_adc65_level0_col2\" class=\"col_heading level0 col2\" >$\\delta t/r  ~(\\%)$</th>\n",
-       "      <th id=\"T_adc65_level0_col3\" class=\"col_heading level0 col3\" >$nx$</th>\n",
-       "      <th id=\"T_adc65_level0_col4\" class=\"col_heading level0 col4\" >$ny$</th>\n",
-       "      <th id=\"T_adc65_level0_col5\" class=\"col_heading level0 col5\" >$t_{cpu}$</th>\n",
+       "      <th id=\"T_8c128_level0_col0\" class=\"col_heading level0 col0\" >Travel time (s)</th>\n",
+       "      <th id=\"T_8c128_level0_col1\" class=\"col_heading level0 col1\" >$\\delta t/t_a  ~(\\%)$</th>\n",
+       "      <th id=\"T_8c128_level0_col2\" class=\"col_heading level0 col2\" >$\\delta t/r  ~(\\%)$</th>\n",
+       "      <th id=\"T_8c128_level0_col3\" class=\"col_heading level0 col3\" >$nx$</th>\n",
+       "      <th id=\"T_8c128_level0_col4\" class=\"col_heading level0 col4\" >$ny$</th>\n",
+       "      <th id=\"T_8c128_level0_col5\" class=\"col_heading level0 col5\" >$t_{cpu}$</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_adc65_level0_row0\" class=\"row_heading level0 row0\" >Analytical $(t_a)$</th>\n",
-       "      <td id=\"T_adc65_row0_col0\" class=\"data row0 col0\" >6.71969</td>\n",
-       "      <td id=\"T_adc65_row0_col1\" class=\"data row0 col1\" > </td>\n",
-       "      <td id=\"T_adc65_row0_col2\" class=\"data row0 col2\" > </td>\n",
-       "      <td id=\"T_adc65_row0_col3\" class=\"data row0 col3\" > </td>\n",
-       "      <td id=\"T_adc65_row0_col4\" class=\"data row0 col4\" > </td>\n",
-       "      <td id=\"T_adc65_row0_col5\" class=\"data row0 col5\" > </td>\n",
+       "      <th id=\"T_8c128_level0_row0\" class=\"row_heading level0 row0\" >Analytical $(t_a)$</th>\n",
+       "      <td id=\"T_8c128_row0_col0\" class=\"data row0 col0\" >6.71969</td>\n",
+       "      <td id=\"T_8c128_row0_col1\" class=\"data row0 col1\" > </td>\n",
+       "      <td id=\"T_8c128_row0_col2\" class=\"data row0 col2\" > </td>\n",
+       "      <td id=\"T_8c128_row0_col3\" class=\"data row0 col3\" > </td>\n",
+       "      <td id=\"T_8c128_row0_col4\" class=\"data row0 col4\" > </td>\n",
+       "      <td id=\"T_8c128_row0_col5\" class=\"data row0 col5\" > </td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_adc65_level0_row1\" class=\"row_heading level0 row1\" >Num integration (n=100)</th>\n",
-       "      <td id=\"T_adc65_row1_col0\" class=\"data row1 col0\" >6.71970</td>\n",
-       "      <td id=\"T_adc65_row1_col1\" class=\"data row1 col1\" >0.00005</td>\n",
-       "      <td id=\"T_adc65_row1_col2\" class=\"data row1 col2\" >0.00435</td>\n",
-       "      <td id=\"T_adc65_row1_col3\" class=\"data row1 col3\" > </td>\n",
-       "      <td id=\"T_adc65_row1_col4\" class=\"data row1 col4\" > </td>\n",
-       "      <td id=\"T_adc65_row1_col5\" class=\"data row1 col5\" > </td>\n",
+       "      <th id=\"T_8c128_level0_row1\" class=\"row_heading level0 row1\" >Num integration (n=100)</th>\n",
+       "      <td id=\"T_8c128_row1_col0\" class=\"data row1 col0\" >6.71970</td>\n",
+       "      <td id=\"T_8c128_row1_col1\" class=\"data row1 col1\" >0.00005</td>\n",
+       "      <td id=\"T_8c128_row1_col2\" class=\"data row1 col2\" >0.00435</td>\n",
+       "      <td id=\"T_8c128_row1_col3\" class=\"data row1 col3\" > </td>\n",
+       "      <td id=\"T_8c128_row1_col4\" class=\"data row1 col4\" > </td>\n",
+       "      <td id=\"T_8c128_row1_col5\" class=\"data row1 col5\" > </td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_adc65_level0_row2\" class=\"row_heading level0 row2\" >Fast Marching (Cartesian)</th>\n",
-       "      <td id=\"T_adc65_row2_col0\" class=\"data row2 col0\" >6.72882</td>\n",
-       "      <td id=\"T_adc65_row2_col1\" class=\"data row2 col1\" >0.13580</td>\n",
-       "      <td id=\"T_adc65_row2_col2\" class=\"data row2 col2\" >12.42817</td>\n",
-       "      <td id=\"T_adc65_row2_col3\" class=\"data row2 col3\" >30</td>\n",
-       "      <td id=\"T_adc65_row2_col4\" class=\"data row2 col4\" >30</td>\n",
-       "      <td id=\"T_adc65_row2_col5\" class=\"data row2 col5\" >0.01110</td>\n",
+       "      <th id=\"T_8c128_level0_row2\" class=\"row_heading level0 row2\" >Fast Marching (Cartesian)</th>\n",
+       "      <td id=\"T_8c128_row2_col0\" class=\"data row2 col0\" >6.72882</td>\n",
+       "      <td id=\"T_8c128_row2_col1\" class=\"data row2 col1\" >0.13580</td>\n",
+       "      <td id=\"T_8c128_row2_col2\" class=\"data row2 col2\" >12.42817</td>\n",
+       "      <td id=\"T_8c128_row2_col3\" class=\"data row2 col3\" >30</td>\n",
+       "      <td id=\"T_8c128_row2_col4\" class=\"data row2 col4\" >30</td>\n",
+       "      <td id=\"T_8c128_row2_col5\" class=\"data row2 col5\" >0.01143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_adc65_level0_row3\" class=\"row_heading level0 row3\" >Fast Marching (Cartesian)</th>\n",
-       "      <td id=\"T_adc65_row3_col0\" class=\"data row3 col0\" >6.72062</td>\n",
-       "      <td id=\"T_adc65_row3_col1\" class=\"data row3 col1\" >0.01374</td>\n",
-       "      <td id=\"T_adc65_row3_col2\" class=\"data row3 col2\" >1.25738</td>\n",
-       "      <td id=\"T_adc65_row3_col3\" class=\"data row3 col3\" >300</td>\n",
-       "      <td id=\"T_adc65_row3_col4\" class=\"data row3 col4\" >300</td>\n",
-       "      <td id=\"T_adc65_row3_col5\" class=\"data row3 col5\" >1.38075</td>\n",
+       "      <th id=\"T_8c128_level0_row3\" class=\"row_heading level0 row3\" >Fast Marching (Cartesian)</th>\n",
+       "      <td id=\"T_8c128_row3_col0\" class=\"data row3 col0\" >6.72062</td>\n",
+       "      <td id=\"T_8c128_row3_col1\" class=\"data row3 col1\" >0.01374</td>\n",
+       "      <td id=\"T_8c128_row3_col2\" class=\"data row3 col2\" >1.25738</td>\n",
+       "      <td id=\"T_8c128_row3_col3\" class=\"data row3 col3\" >300</td>\n",
+       "      <td id=\"T_8c128_row3_col4\" class=\"data row3 col4\" >300</td>\n",
+       "      <td id=\"T_8c128_row3_col5\" class=\"data row3 col5\" >1.38547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_adc65_level0_row4\" class=\"row_heading level0 row4\" >Fast Marching (Spherical)</th>\n",
-       "      <td id=\"T_adc65_row4_col0\" class=\"data row4 col0\" >6.72719</td>\n",
-       "      <td id=\"T_adc65_row4_col1\" class=\"data row4 col1\" >0.11153</td>\n",
-       "      <td id=\"T_adc65_row4_col2\" class=\"data row4 col2\" >10.20713</td>\n",
-       "      <td id=\"T_adc65_row4_col3\" class=\"data row4 col3\" >30</td>\n",
-       "      <td id=\"T_adc65_row4_col4\" class=\"data row4 col4\" >30</td>\n",
-       "      <td id=\"T_adc65_row4_col5\" class=\"data row4 col5\" >0.01247</td>\n",
+       "      <th id=\"T_8c128_level0_row4\" class=\"row_heading level0 row4\" >Fast Marching (Spherical)</th>\n",
+       "      <td id=\"T_8c128_row4_col0\" class=\"data row4 col0\" >6.72719</td>\n",
+       "      <td id=\"T_8c128_row4_col1\" class=\"data row4 col1\" >0.11153</td>\n",
+       "      <td id=\"T_8c128_row4_col2\" class=\"data row4 col2\" >10.20713</td>\n",
+       "      <td id=\"T_8c128_row4_col3\" class=\"data row4 col3\" >30</td>\n",
+       "      <td id=\"T_8c128_row4_col4\" class=\"data row4 col4\" >30</td>\n",
+       "      <td id=\"T_8c128_row4_col5\" class=\"data row4 col5\" >0.01261</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_adc65_level0_row5\" class=\"row_heading level0 row5\" >Fast Marching (Spherical)</th>\n",
-       "      <td id=\"T_adc65_row5_col0\" class=\"data row5 col0\" >6.72034</td>\n",
-       "      <td id=\"T_adc65_row5_col1\" class=\"data row5 col1\" >0.00959</td>\n",
-       "      <td id=\"T_adc65_row5_col2\" class=\"data row5 col2\" >0.87746</td>\n",
-       "      <td id=\"T_adc65_row5_col3\" class=\"data row5 col3\" >300</td>\n",
-       "      <td id=\"T_adc65_row5_col4\" class=\"data row5 col4\" >300</td>\n",
-       "      <td id=\"T_adc65_row5_col5\" class=\"data row5 col5\" >1.51414</td>\n",
+       "      <th id=\"T_8c128_level0_row5\" class=\"row_heading level0 row5\" >Fast Marching (Spherical)</th>\n",
+       "      <td id=\"T_8c128_row5_col0\" class=\"data row5 col0\" >6.72034</td>\n",
+       "      <td id=\"T_8c128_row5_col1\" class=\"data row5 col1\" >0.00959</td>\n",
+       "      <td id=\"T_8c128_row5_col2\" class=\"data row5 col2\" >0.87746</td>\n",
+       "      <td id=\"T_8c128_row5_col3\" class=\"data row5 col3\" >300</td>\n",
+       "      <td id=\"T_8c128_row5_col4\" class=\"data row5 col4\" >300</td>\n",
+       "      <td id=\"T_8c128_row5_col5\" class=\"data row5 col5\" >1.45716</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_adc65_level0_row6\" class=\"row_heading level0 row6\" >Homogeneous</th>\n",
-       "      <td id=\"T_adc65_row6_col0\" class=\"data row6 col0\" >6.79312</td>\n",
-       "      <td id=\"T_adc65_row6_col1\" class=\"data row6 col1\" >1.09267</td>\n",
-       "      <td id=\"T_adc65_row6_col2\" class=\"data row6 col2\" > </td>\n",
-       "      <td id=\"T_adc65_row6_col3\" class=\"data row6 col3\" > </td>\n",
-       "      <td id=\"T_adc65_row6_col4\" class=\"data row6 col4\" > </td>\n",
-       "      <td id=\"T_adc65_row6_col5\" class=\"data row6 col5\" > </td>\n",
+       "      <th id=\"T_8c128_level0_row6\" class=\"row_heading level0 row6\" >Homogeneous</th>\n",
+       "      <td id=\"T_8c128_row6_col0\" class=\"data row6 col0\" >6.79312</td>\n",
+       "      <td id=\"T_8c128_row6_col1\" class=\"data row6 col1\" >1.09267</td>\n",
+       "      <td id=\"T_8c128_row6_col2\" class=\"data row6 col2\" > </td>\n",
+       "      <td id=\"T_8c128_row6_col3\" class=\"data row6 col3\" > </td>\n",
+       "      <td id=\"T_8c128_row6_col4\" class=\"data row6 col4\" > </td>\n",
+       "      <td id=\"T_8c128_row6_col5\" class=\"data row6 col5\" > </td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x121d12cf0>"
+       "<pandas.io.formats.style.Styler at 0x11ed1b620>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
